--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
             </ul>
         </nav>
     </header>
+<main>
+    <section>
+
+    </section>
+</main>
+ <footer>
+    
+ </footer>
 </body>
 </html>
